# AI-Analyst

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  extracted_prompt_template.txt  pyproject.toml  requirements.txt
backend/app/: constants.py  generate_deal_note.py  generate_deal_note_pdf.py  main.py  vertex_config.py
backend/app/config/: settings.py
backend/app/data/: analyzers.py  processors.py
backend/app/flows/: orchestrators.py
backend/app/models/: pitch_extractor.py  pitch_refiner.py
backend/app/processors/: base.py  factory.py  pdf_processor.py
backend/app/prompts/: comprehensive_deal_note_prompt.py  deal_note_prompt.py  multimodal_extraction_prompt.py
backend/app/refiners/: pitch_common_refiner.py
backend/app/router/: deal_note.py  generate_benchmark.py  generate_deal_note.py  process_raw_pitches.py  rag_file_upload.py
backend/app/services/: gemini_api.py
backend/app/services/benchmark_creation/: firestore_service.py  gcp_service.py  gemini_service.py  vision_service.py
backend/app/services/gemini/: api.py
backend/app/services/rag_agent/: deal_note_agent.py  deal_note_agent_analyser.py  (+1 more)
backend/app/storage/: store_raw_pitch.py
backend/app/utils/: gcs_utils.py  helpers.py
backend/app/visualizations/: charts.py  comparisons.py  reports.py
backend/config/: gemini_config.py  settings.py
backend/data/: analyzers.py
backend/flows/: orchestrators.py
backend/visualizations/: charts.py  comparisons.py
config/: settings.py
data/: processors.py
frontend/: app_interface.py
visualizations/: reports.py
(+19 files in other folders)
