[project]
name = "ai-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "google-adk>=1.14.1",
    "google-cloud-aiplatform>=1.113.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-vision>=3.10.2",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-google-vertexai>=2.1.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "seaborn>=0.13.2",
    "statistics>=1.0.3.5",
    "streamlit>=1.49.1",
    "streamlit-option-menu>=0.4.0",
    "uvicorn[standard]>=0.35.0",
    "vertexai>=1.43.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
